# nova-backtest

./: .env.default  .pypirc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile
.github/: FUNDING.yml
.github/workflows/: make-docs.yml  publish-to-pypi.yml  run-test.yml
nova/: __init__.py
nova/api/: client.py  mutation.py  mutations.py  nova_client.py  queries.py  query.py
nova/clients/: binance.py  bybit.py  coinbase.py  ftx.py  helpers.py  huobi.py  kraken.py  oanda.py  okx.py  tda.py
nova/scripts/: setup_pairs.py  setup_strategies.py
nova/test/: test.backtest.py  test.client.py  test.strategy.py
nova/utils/: backtest.py  bot.py  constant.py  helpers.py  logger.py  strategy.py
novalabs-backtest/utils/: indicators.py
novalabs/clients/: binance.py
novalabs/utils/: backtest.py  constant.py
random/: bot.py
src/exchange_client/: ftx_client.py
src/nova_api/: entity.py  nova_client.py
test/api/: test.pairs.py  test.strategies.py  test_bots.py  test_pairs.py  test_strategies.py
test/bot/: test_add_exit_info.py  test_compute_profit.py  test_computed_profit.py  test_entering_positions.py  test_exiting_positions.py  test_get_position_size.py  test_production_run.py  test_push_backend.py  test_security_close_all_positions.py  test_security_max_down.py  test_update_tp_sl.py  test_verify_positions.py
test/clients/: test.binance.py  test.ftx.py  test.get_all_pairs.py  test.get_historiacal.py  test.get_position_size.py  test.get_prod_data.py  test.open_close_order.py  test_cancel_order.py  (+29 more)
(+5 files in other folders)
